--- a/app/budget/directives/budgetScenarioToolbar/budgetScenarioToolbar.css
+++ b/app/budget/directives/budgetScenarioToolbar/budgetScenarioToolbar.css
@@ -1,17 +1,11 @@
 .budget-scenario-toolbar {
 	width: 100%;
+	height: 4em;
 	display: flex;
-	margin-bottom: 20px;
 	justify-content: space-between;
 
-	position: fixed;
-	top: 146px;
-	left: 200px;
-	width: calc(100% - 200px );
-	margin-top: -30px;
-	padding: 10px 20px;
+	padding: 10px 14px;
 	background-color: #fff;
-	border-bottom: 1px solid #e3e3e3;
 	z-index: 34;
 }
 
